move build/publ to github; update versions; minor refactor